--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,46 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# → Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# → Build output
+/build
+/dist
+/.parcel-cache
+
+# → Testing
 /coverage
 
-# production
-/build
-
-# misc
-.DS_Store
+# → Local environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# → Mac system files
+.DS_Store
+
+# → Windows system files
+Thumbs.db
+
+# → Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# → Editor
+/.vscode
+/.idea
+
+# → Storybook
+/.storybook-out
+
+# → Cache
+/.cache
+/.temp
+
+# → Other
+*.swp
+*.tmp
