--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com",
+  "homepage": "https://sanjay053.github.io/my-portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
